glue/soloud.cs


// SoLoud wrapper for C# (cs)
// This file is autogenerated; any changes will be overwritten

using System;
using System.Runtime.InteropServices;
using System.Text;

namespace SoLoud
{

public class SoloudObject
{
    public IntPtr objhandle;
}



public class Soloud : SoloudObject
{
	public const int WASAPI = 6;
	public const int AUTO = 0;
	public const int CLIP_ROUNDOFF = 1;
	public const int SDL2 = 2;
	public const int ENABLE_VISUALIZATION = 2;
	public const int SDL = 1;
	public const int PORTAUDIO = 3;
	public const int OPENAL = 8;
	public const int BACKEND_MAX = 9;
	public const int XAUDIO2 = 5;
	public const int WINMM = 4;
	public const int OSS = 7;

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern IntPtr Soloud_create();
	public Soloud()
	{
		objhandle = Soloud_create();
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern IntPtr Soloud_destroy(IntPtr aObjHandle);
	~Soloud()
	{
		Soloud_destroy(objhandle);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern int Soloud_initEx(IntPtr aObjHandle, uint aFlags, uint aBackend, uint aSamplerate, uint aBufferSize);
	public int init(uint aFlags = CLIP_ROUNDOFF, uint aBackend = AUTO, uint aSamplerate = AUTO, uint aBufferSize = AUTO)
	{
		return Soloud_initEx(objhandle, aFlags, aBackend, aSamplerate, aBufferSize);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern void Soloud_deinit(IntPtr aObjHandle);
	public void deinit()
	{
		Soloud_deinit(objhandle);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern uint Soloud_getVersion(IntPtr aObjHandle);
	public uint getVersion()
	{
		return Soloud_getVersion(objhandle);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern IntPtr Soloud_getErrorString(IntPtr aObjHandle, int aErrorCode);
	public string getErrorString(int aErrorCode)
	{
		IntPtr p = Soloud_getErrorString(objhandle, aErrorCode);
		return Marshal.PtrToStringAnsi(p);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern uint Soloud_playEx(IntPtr aObjHandle, IntPtr aSound, float aVolume, float aPan, int aPaused, uint aBus);
	public uint play(SoloudObject aSound, float aVolume = 1.0f, float aPan = 0.0f, int aPaused = 0, uint aBus = 0)
	{
		return Soloud_playEx(objhandle, aSound.objhandle, aVolume, aPan, aPaused, aBus);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern uint Soloud_playClockedEx(IntPtr aObjHandle, double aSoundTime, IntPtr aSound, float aVolume, float aPan, uint aBus);
	public uint playClocked(double aSoundTime, SoloudObject aSound, float aVolume = 1.0f, float aPan = 0.0f, uint aBus = 0)
	{
		return Soloud_playClockedEx(objhandle, aSoundTime, aSound.objhandle, aVolume, aPan, aBus);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern uint Soloud_play3dEx(IntPtr aObjHandle, IntPtr aSound, float aPosX, float aPosY, float aPosZ, float aVelX, float aVelY, float aVelZ, float aVolume, int aPaused, uint aBus);
	public uint play3d(SoloudObject aSound, float aPosX, float aPosY, float aPosZ, float aVelX = 0.0f, float aVelY = 0.0f, float aVelZ = 0.0f, float aVolume = 1.0f, int aPaused = 0, uint aBus = 0)
	{
		return Soloud_play3dEx(objhandle, aSound.objhandle, aPosX, aPosY, aPosZ, aVelX, aVelY, aVelZ, aVolume, aPaused, aBus);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern uint Soloud_play3dClockedEx(IntPtr aObjHandle, double aSoundTime, IntPtr aSound, float aPosX, float aPosY, float aPosZ, float aVelX, float aVelY, float aVelZ, float aVolume, uint aBus);
	public uint play3dClocked(double aSoundTime, SoloudObject aSound, float aPosX, float aPosY, float aPosZ, float aVelX = 0.0f, float aVelY = 0.0f, float aVelZ = 0.0f, float aVolume = 1.0f, uint aBus = 0)
	{
		return Soloud_play3dClockedEx(objhandle, aSoundTime, aSound.objhandle, aPosX, aPosY, aPosZ, aVelX, aVelY, aVelZ, aVolume, aBus);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern void Soloud_seek(IntPtr aObjHandle, uint aVoiceHandle, double aSeconds);
	public void seek(uint aVoiceHandle, double aSeconds)
	{
		Soloud_seek(objhandle, aVoiceHandle, aSeconds);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern void Soloud_stop(IntPtr aObjHandle, uint aVoiceHandle);
	public void stop(uint aVoiceHandle)
	{
		Soloud_stop(objhandle, aVoiceHandle);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern void Soloud_stopAll(IntPtr aObjHandle);
	public void stopAll()
	{
		Soloud_stopAll(objhandle);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern void Soloud_stopAudioSource(IntPtr aObjHandle, IntPtr aSound);
	public void stopAudioSource(SoloudObject aSound)
	{
		Soloud_stopAudioSource(objhandle, aSound.objhandle);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern void Soloud_setFilterParameter(IntPtr aObjHandle, uint aVoiceHandle, uint aFilterId, uint aAttributeId, float aValue);
	public void setFilterParameter(uint aVoiceHandle, uint aFilterId, uint aAttributeId, float aValue)
	{
		Soloud_setFilterParameter(objhandle, aVoiceHandle, aFilterId, aAttributeId, aValue);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern float Soloud_getFilterParameter(IntPtr aObjHandle, uint aVoiceHandle, uint aFilterId, uint aAttributeId);
	public float getFilterParameter(uint aVoiceHandle, uint aFilterId, uint aAttributeId)
	{
		return Soloud_getFilterParameter(objhandle, aVoiceHandle, aFilterId, aAttributeId);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern void Soloud_fadeFilterParameter(IntPtr aObjHandle, uint aVoiceHandle, uint aFilterId, uint aAttributeId, float aTo, double aTime);
	public void fadeFilterParameter(uint aVoiceHandle, uint aFilterId, uint aAttributeId, float aTo, double aTime)
	{
		Soloud_fadeFilterParameter(objhandle, aVoiceHandle, aFilterId, aAttributeId, aTo, aTime);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern void Soloud_oscillateFilterParameter(IntPtr aObjHandle, uint aVoiceHandle, uint aFilterId, uint aAttributeId, float aFrom, float aTo, double aTime);
	public void oscillateFilterParameter(uint aVoiceHandle, uint aFilterId, uint aAttributeId, float aFrom, float aTo, double aTime)
	{
		Soloud_oscillateFilterParameter(objhandle, aVoiceHandle, aFilterId, aAttributeId, aFrom, aTo, aTime);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern double Soloud_getStreamTime(IntPtr aObjHandle, uint aVoiceHandle);
	public double getStreamTime(uint aVoiceHandle)
	{
		return Soloud_getStreamTime(objhandle, aVoiceHandle);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern int Soloud_getPause(IntPtr aObjHandle, uint aVoiceHandle);
	public int getPause(uint aVoiceHandle)
	{
		return Soloud_getPause(objhandle, aVoiceHandle);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern float Soloud_getVolume(IntPtr aObjHandle, uint aVoiceHandle);
	public float getVolume(uint aVoiceHandle)
	{
		return Soloud_getVolume(objhandle, aVoiceHandle);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern float Soloud_getPan(IntPtr aObjHandle, uint aVoiceHandle);
	public float getPan(uint aVoiceHandle)
	{
		return Soloud_getPan(objhandle, aVoiceHandle);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern float Soloud_getSamplerate(IntPtr aObjHandle, uint aVoiceHandle);
	public float getSamplerate(uint aVoiceHandle)
	{
		return Soloud_getSamplerate(objhandle, aVoiceHandle);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern int Soloud_getProtectVoice(IntPtr aObjHandle, uint aVoiceHandle);
	public int getProtectVoice(uint aVoiceHandle)
	{
		return Soloud_getProtectVoice(objhandle, aVoiceHandle);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern uint Soloud_getActiveVoiceCount(IntPtr aObjHandle);
	public uint getActiveVoiceCount()
	{
		return Soloud_getActiveVoiceCount(objhandle);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern int Soloud_isValidVoiceHandle(IntPtr aObjHandle, uint aVoiceHandle);
	public int isValidVoiceHandle(uint aVoiceHandle)
	{
		return Soloud_isValidVoiceHandle(objhandle, aVoiceHandle);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern float Soloud_getRelativePlaySpeed(IntPtr aObjHandle, uint aVoiceHandle);
	public float getRelativePlaySpeed(uint aVoiceHandle)
	{
		return Soloud_getRelativePlaySpeed(objhandle, aVoiceHandle);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern float Soloud_getPostClipScaler(IntPtr aObjHandle);
	public float getPostClipScaler()
	{
		return Soloud_getPostClipScaler(objhandle);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern float Soloud_getGlobalVolume(IntPtr aObjHandle);
	public float getGlobalVolume()
	{
		return Soloud_getGlobalVolume(objhandle);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern void Soloud_setGlobalVolume(IntPtr aObjHandle, float aVolume);
	public void setGlobalVolume(float aVolume)
	{
		Soloud_setGlobalVolume(objhandle, aVolume);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern void Soloud_setPostClipScaler(IntPtr aObjHandle, float aScaler);
	public void setPostClipScaler(float aScaler)
	{
		Soloud_setPostClipScaler(objhandle, aScaler);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern void Soloud_setPause(IntPtr aObjHandle, uint aVoiceHandle, int aPause);
	public void setPause(uint aVoiceHandle, int aPause)
	{
		Soloud_setPause(objhandle, aVoiceHandle, aPause);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern void Soloud_setPauseAll(IntPtr aObjHandle, int aPause);
	public void setPauseAll(int aPause)
	{
		Soloud_setPauseAll(objhandle, aPause);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern void Soloud_setRelativePlaySpeed(IntPtr aObjHandle, uint aVoiceHandle, float aSpeed);
	public void setRelativePlaySpeed(uint aVoiceHandle, float aSpeed)
	{
		Soloud_setRelativePlaySpeed(objhandle, aVoiceHandle, aSpeed);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern void Soloud_setProtectVoice(IntPtr aObjHandle, uint aVoiceHandle, int aProtect);
	public void setProtectVoice(uint aVoiceHandle, int aProtect)
	{
		Soloud_setProtectVoice(objhandle, aVoiceHandle, aProtect);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern void Soloud_setSamplerate(IntPtr aObjHandle, uint aVoiceHandle, float aSamplerate);
	public void setSamplerate(uint aVoiceHandle, float aSamplerate)
	{
		Soloud_setSamplerate(objhandle, aVoiceHandle, aSamplerate);
	}
